updated figure and intro awa text

--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -444,10 +444,10 @@ TBA section of the beam line.
 \end{figure}
 
 \vspace{-1em}
-Compared to the Ferrario experiment in Section \ref{ferrario}, 
-we increase the number of design variables and objectives by a factor of two.
-The problem is also less predictable, due to the increased number of design variables
-and nonlinear effects such as space charge, there is not a definite idea
+We also chose this model to demonstrate the frameworks ability to tackle larger problems.
+The number of design variables is eight, and the number of objectives is seven.
+This problem is also less predictable, due to the high dimensionality 
+and nonlinear effects such as space charge. There is not a definite idea
 before hand where the Pareto front will fall. This work is also meaningful in that
 it will guide future operations at the AWA.
 
@@ -460,7 +460,7 @@ it will guide future operations at the AWA.
 \quad & \text{Volt}_{\text{Gun}} = 64\left[\text{MV/m}\right] \label{eq:awa:lastconstr}\\
 \quad & \text{Volt}_{\text{Linac}} = 24-25\left[\text{MV/m}\right] \\
 \quad & \sigma_x = \sigma_y = 9 \left[\text{mm}\right] \label{eq:awa:firstdvar}\\
-\quad & \phi_{\text{linac}} =0 \label{eq:awa:lastdvar}
+\quad & \phi_{\text{linac}} =0^\circ \label{eq:awa:lastdvar}
 \end{align}
 
 The first four objectives minimize the transverse ($rms_x$) and longitudinal ($rms_s$) 
