--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -452,9 +452,9 @@ before hand where the Pareto front will fall. This work is also meaningful in th
 it will guide future operations at the AWA.
 
 \begin{align}
-\text{min}  \quad & \text{rms}_{x, s_1}, \quad \text{rms}_{x, s_2} \label{eq:awa:p1}\\
-& \text{rms}_{s, s_1}, \quad \text{rms}_{s, s_2} \label{eq:awa:p2}\\
-& \varepsilon_{x,s_1}, \quad \varepsilon_{x,s_2} \label{eq:awa:p3} \\
+\text{min}  \quad & \text{rms}_{x}\left(s = s_1\right), \quad \text{rms}_{x}\left(s = s_2\right) \label{eq:awa:p1}\\
+& \text{rms}_{s}\left(s = s_1\right), \quad \text{rms}_{s}\left(s = s_2\right), \label{eq:awa:p2}\\
+& \varepsilon_{x}\left(s = s_1\right), \quad \varepsilon_{x}\left(s = s_2\right), \label{eq:awa:p3} \\
 & dE \label{eq:awa:p4} \\
 \text{subject to} \quad & q = 40 \left[\text{nC}\right] \label{eq:awa:firstconstr}\\
 \quad & \text{Volt}_{\text{Gun}} = 64\left[\text{MV/m}\right] \label{eq:awa:lastconstr}\\
@@ -550,7 +550,6 @@ the parameters used is listed in Table \ref{fidelity}.
 	\label{tstep}
 \end{figure}
 
-
 \begin{table}%[h!]
 	\begin{center}
 		\caption{Low and mid fidelity simulation parameters.}
@@ -571,9 +570,15 @@ the parameters used is listed in Table \ref{fidelity}.
 While the optimization problem and goals are well defined (Section \ref{awaproblem}), 
 it is not clear what the best input parameters for the NSGA-II are.
 These parameters include gene mutation probability, mutation probability, 
-recombination probability, number of individuals (initial and independent), and number of generations. 
+recombination probability, number of individuals (initial and and for later generations), and number of generations to complete. 
 Given the beam line and design variables given in Section \ref{awaproblem}, 
-four optimization experiments were done with varying NSGA-II parameters, see Table \ref{extable}. 
+four optimization experiments were done with varying NSGA-II parameters. 
+Similar to the time step scan, 
+the goal of this exercise was to determine which set of optimization
+parameters strongly influence the results, 
+and whether there was a time to solution difference.
+From here on, we will reference each experiment as ex-1, ex-2, ex-3, and ex-4
+as shown in Table \ref{extable}. 
 \begin{table}%[h!]
 	\begin{center}
 		\caption{Input Parameters for initial twenty four hour AWA optimization experiments. 
@@ -590,53 +595,43 @@ four optimization experiments were done with varying NSGA-II parameters, see Tab
 			\noalign{\smallskip}\hline
 		\end{tabular*}
 	\end{center}
-\end{table} 
-From here on, we will reference each experiment as ex-1, ex-2, ex-3, and ex-4. 
+\end{table}
+
 The initial number of individuals was fixed at 656, 
-and the number of independent individuals per generation was fixed at 328. 
+and the minimum number individuals in later generations was fixed at 328. 
 These numbers we in part based on the architecture of the KNL's. 
 Since each simulation takes 8 cores, and there are 64 cores per KNL node, 
 we wanted a large population size that would fit evenly on these resources. 
-We also reduced the number of objectives to the four most important for quicker evaluation of these tests.
-These objectives include: 
-$\epsilon_{x, s_1}\text{, } \epsilon_{x, s_2}\text{, } \text{rms}_{s, s_1}\text{, and }  \text{rms}_{s, s_2}$
-The optimization in the OPAL input file was defined as follows:
+Each experiment was allowed to run for twenty four hours, with 
+a max generation limit of 100. 
+We also reduced the six objectives to the four most important for quicker evaluation of these tests \nrnote{Q for Andreas, is it true less obj is faster}.
+The objectives include: 
+$\varepsilon_{x}\left(s = s_1\right)\text{, } \varepsilon_{x}\left(s = s_2\right)\text{, } \text{rms}_{s}\left(s = s_1\right)\text{, and }  \text{rms}_{s}\left(s = s_2\right)$. 
+The OPAL input file for ex-3 is given as an example:
+
 \vspace{0.2cm}
 {\footnotesize \begin{verbatim}
+	TITLE, STRING="ANL Optimisation";
+	
+	// Gun variables
 	dv0: DVAR, VARIABLE="IBF",    LOWERBOUND=200.0, UPPERBOUND=500.0;
 	dv1: DVAR, VARIABLE="IM",     LOWERBOUND=170.0, UPPERBOUND=260.0;
 	dv2: DVAR, VARIABLE="GPHASE", LOWERBOUND=-30.0, UPPERBOUND=0.0;
 	dv3: DVAR, VARIABLE="FWHM",   LOWERBOUND=1.5,   UPPERBOUND=10.0;
 	
-	// Quad values
+	// Quad variables
 	dv4: DVAR, VARIABLE="KQ1", LOWERBOUND=-8.0, UPPERBOUND=8.0;
 	dv5: DVAR, VARIABLE="KQ2", LOWERBOUND=-8.0, UPPERBOUND=8.0;
 	dv6: DVAR, VARIABLE="KQ3", LOWERBOUND=-8.0, UPPERBOUND=8.0;
 	dv7: DVAR, VARIABLE="KQ4", LOWERBOUND=-8.0, UPPERBOUND=8.0;
 	
+	// Objectives
 	rmss1:  OBJECTIVE,EXPR="fabs(statVariableAt('rms_s',16.5))";
-	emitx1: OBJECTIVE,EXPR="fabs(statVariableAt('emit_x',16.5))";
-	
+	emitx1: OBJECTIVE,EXPR="fabs(statVariableAt('emit_x',16.5))";	
 	rmss2:  OBJECTIVE,EXPR="fabs(statVariableAt('rms_s',18.5))";
 	emitx2: OBJECTIVE,EXPR="fabs(statVariableAt('emit_x',18.5))";
-	\end{verbatim}}
-\vspace{0.2cm}
-
-
-They were each allowed to run for twenty four hours. 
-Similar to the time step scan, the goal of this exercise was to determine which set of optimization
-parameters strongly influence the results, and whether there was a time to solution
-difference.
-
-
-
-After collection of all data, the Pareto front of each data set was plotted.
- 
-
-
-\vspace{0.2cm}
-{\footnotesize\begin{verbatim}
-OPTIMIZE, INPUT="tmpl/optLinac_40nC.tmpl",
+	
+	OPTIMIZE, INPUT="tmpl/optLinac_40nC.tmpl",
 	OUTPUT="optLinac_40nC",
 	OUTDIR="results",
 	OBJECTIVES = {rmss1, rmsx1, emitx1, de1, rmss2, rmsx2, emitx2},
@@ -653,7 +648,41 @@ OPTIMIZE, INPUT="tmpl/optLinac_40nC.tmpl",
 	GENE_MUTATION_PROBABILITY=0.8,
 	MUTATION_PROBABILITY=0.8,
 	RECOMBINATION_PROBABILITY=0.2;
-QUIT;
-\end{verbatim}}
+	QUIT;
+	\end{verbatim}}
+\vspace{0.2cm}
+
+After collection of the data for all four experiments, several metrics
+were compared, including number of generations completed in twenty four hours,
+location of Pareto fronts at $s_1$ and $s_2$, and the design variables at the Pareto front. From Table \ref{extable}, we clearly see ex-3 is significantly 
+slower, as it evaluated about 30 to 40 fewer generations than the other experiments.
+Perhaps this trade off would be acceptable if the Pareto front was significantly 
+improved, but from Fig. \ref{expareto1}, we can see this is not the case.
+The Pareto fronts at $s_1$, are nearly identical. We could expect
+they would continue to converge given more time. 
+When looking at the Pareto front for $s_2$, we see ex-4 has a slight 
+edge over the others.  
+\begin{figure}
+	\centering
+	\begin{subfigure}{0.49\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{Report/ex-pareto1}
+		\caption{Pareto fronts at $s_1$.}
+		\label{exparetos1}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+	\centering
+	\includegraphics[width=\textwidth]{Report/ex-pareto2}
+	\caption{Pareto fronts at $s_2$.}
+	\label{exparetos2}
+	\end{subfigure}
+	\caption{Comparison of Pareto fronts for initial experiments.}
+	\label{expareto}
+\end{figure}
+
+
+
+
+
 
 
