--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -604,7 +604,8 @@ Since each simulation takes 8 cores, and there are 64 cores per KNL node,
 we wanted a large population size that would fit evenly on these resources. 
 Each experiment was allowed to run for twenty four hours, with 
 a max generation limit of 100. 
-We also reduced the six objectives to the four most important for quicker evaluation of these tests \nrnote{Q for Andreas, is it true less obj is faster}.
+We also reduced the six objectives to the four most important for quicker evaluation of these tests 
+%\nrnote{Q for Andreas, is it true less obj is faster}.
 The objectives include: 
 $\varepsilon_{x}\left(s = s_1\right)\text{, } \varepsilon_{x}\left(s = s_2\right)\text{, } \text{rms}_{s}\left(s = s_1\right)\text{, and }  \text{rms}_{s}\left(s = s_2\right)$. 
 The OPAL input file for ex-3 is given as an example:
