adding DOE in acknowledgments

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -843,7 +843,13 @@ Finally, combining the presented multi-objective optimization framework with
 \section{ACKNOWLEDGMENT}
 
 The authors thank the \textsc{SwissFEL} and AWA teams for contributing to the
-  formulation of optimization problems. We gratefully acknowledge the computing resources provided on Bebop, a HPC cluster operated by the LCRC at ANL.
+  formulation of optimization problems. 
+  We gratefully acknowledge the computing resources provided on Bebop,
+  a high performance computing cluster operated by the 
+  Labratory Computing Resource Center at Argonne National Laboratory.
+  This work was partly supported by the 
+  U.S. Department of Energy, Office of Science, under 
+  contract number DE-AC02-06CH11357 and grant number DE-SC0015479. 
 \appendix
 
 \section{Forward Solver Implementation}
