--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -423,10 +423,11 @@ Both trackers agree within acceptable limits \cite{chao:99}.
   %design variables are narrow enough (iteratively diminishing search space). 
 %\vspace{-7em}
 \subsection{AWA Photoinjector Optimization} \label{awaproblem}
-Next we apply the optimization framework to the high charge beam line at the AWA, 
-which consists of an rf photocathode gun, two solenoids, six linear accelerating cavities, 
-followed by four quadrupoles and a stripline kicker, as shown in Fig. \ref{awa-pic}. 
-Portions of this beam line served as the injector for Two Beam 
+Next we apply the optimization framework to the high charge beam line at the AWA. 
+As shown in Fig.  \ref{awa-pic}, this beam line consists of an rf photocathode gun, 
+two solenoids, six linear accelerating cavities, 
+followed by four quadrupoles and a stripline kicker. 
+This beam line has served as the injector for Two Beam 
 Acceleration (TBA) experiments in the past [X1], and will be used for 
 similar experiments in the future [X2]. Main constraints on prior experimental 
 results were the beam size and emittance as the beam passed through small aperture 
@@ -443,7 +444,7 @@ TBA section of the beam line.
 	\label{awa-pic}
 \end{figure}
 
-\vspace{-1em}
+%\vspace{-1em}
 We also chose this model to demonstrate the frameworks ability to tackle larger problems.
 The number of design variables is eight, and the number of objectives is seven.
 This problem is also less predictable, due to the high dimensionality 
@@ -657,7 +658,7 @@ were compared, including number of generations completed in twenty four hours,
 location of Pareto fronts at $s_1$ and $s_2$, and the design variables at the Pareto front. From Table \ref{extable}, we clearly see ex-3 is significantly 
 slower, as it evaluated about 30 to 40 fewer generations than the other experiments.
 Perhaps this trade off would be acceptable if the Pareto front was significantly 
-improved, but from Fig. \ref{expareto1}, we can see this is not the case.
+improved, but from Fig. \ref{expareto}, we can see this is not the case.
 The Pareto fronts at $s_1$, are nearly identical. We could expect
 they would continue to converge given more time. 
 When looking at the Pareto front for $s_2$, we see ex-4 has a slight 
@@ -668,18 +669,40 @@ edge over the others.
 		\centering
 		\includegraphics[width=\textwidth]{Report/ex-pareto1}
 		\caption{Pareto fronts at $s_1$.}
-		\label{exparetos1}
+		\label{expareto1}
 	\end{subfigure}
 	\begin{subfigure}{0.49\textwidth}
 	\centering
 	\includegraphics[width=\textwidth]{Report/ex-pareto2}
 	\caption{Pareto fronts at $s_2$.}
-	\label{exparetos2}
+	\label{expareto2}
 	\end{subfigure}
-	\caption{Comparison of Pareto fronts for initial experiments.}
+	\caption{Comparison of Pareto fronts for initial optimization experiments.}
 	\label{expareto}
 \end{figure}
 
+Next compare the design variables at each point on the 
+Pareto front.
+\begin{figure}
+	\centering
+	\begin{subfigure}{1\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{Report/ex-pareto1}
+		\caption{Pareto fronts at $s_1$.}
+		\label{bounds1}
+	\end{subfigure}
+	\begin{subfigure}{1\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{Report/ex-pareto2}
+		\caption{Pareto fronts at $s_2$.}
+		\label{bounds2}
+	\end{subfigure}
+	\caption{Comparison of design variables for each Pareto front.}
+	\label{bounds}
+\end{figure}
+
+
+ 
 
 
 
