editing awa section 5.3

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1586,3 +1586,16 @@ author =       "W. Hackbusch",
   year={2003},
   publisher={ACM}
 }
+
+@article{gai_power_jing_2012, 
+	title={Short-pulse dielectric two-beam acceleration}, 
+	volume={78}, DOI={10.1017/S0022377812000037}, 
+	number={4}, 
+	journal={Journal of Plasma Physics}, 
+	publisher={Cambridge University Press}, 
+	author={GAI, W. and POWER, J. G. and JING, C.}, year={2012}, pages={339–345}
+}
+
+
+
+
