--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -189,8 +189,8 @@ The next section introduces the notation of multi-objective optimization
   theory and describes the first implemented optimizer.
 In Section~\ref{sec:framework} we discuss the implementation of the framework.
 We introduce the employed forward-solver in Section~\ref{sec:forward-solver}.
-A validation and a proof of concept application in two beam dynamics problems is
-  discussed in Section~\ref{sec:experiments}.
+A validation and a proof of concept application in the two beam dynamics problems 
+mentioned above is discussed in Section~\ref{sec:experiments}.
 
 
 
@@ -845,8 +845,7 @@ Finally, combining the presented multi-objective optimization framework with
 The authors thank the \textsc{SwissFEL} and AWA teams for contributing to the
   formulation of optimization problems. 
   We gratefully acknowledge the computing resources provided on Bebop,
-  a high performance computing cluster operated by the 
-  Labratory Computing Resource Center at Argonne National Laboratory.
+  a HPC cluster operated by the LCRC at ANL.
   This work was partly supported by the 
   U.S. Department of Energy, Office of Science, under 
   contract number DE-AC02-06CH11357 and grant number DE-SC0015479. 
@@ -970,7 +969,7 @@ private:
 
 
 \bibliographystyle{abbrv}
-\bibliography{../../bibliography/phd}
+\bibliography{paper}
 
 \end{document}
 
