--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -427,13 +427,13 @@ Next we apply the optimization framework to the high charge beam line at the AWA
 As shown in Fig.  \ref{awa-pic}, this beam line consists of an rf photocathode gun, 
 two solenoids, six linear accelerating cavities, 
 followed by four quadrupoles and a stripline kicker. 
-This beam line has served as the injector for Two Beam 
-Acceleration (TBA) experiments in the past [X1], and will be used for 
-similar experiments in the future [X2]. Main constraints on prior experimental 
-results were the beam size and emittance as the beam passed through small aperture 
+The charge of interest is 40 nC, and based on Two Beam 
+Acceleration (TBA) \cite{gai_power_jing_2012} experiments performed in the past 
+at AWA. Similar experiments will take place in the future and motivate this work. 
+Prior experimental results were limited by beam size and emittance as the beam passed through small aperture 
 wakefield structures located after the quadrupoles. 
 In an attempt to maximize charge transmission in upcoming experiments
-we optimize several parameters in the gun and quadrupole leading into the 
+we optimize several parameters in the gun and quadrupoles leading into the 
 TBA section of the beam line.
 %\vspace{-1em}
 
@@ -445,11 +445,11 @@ TBA section of the beam line.
 \end{figure}
 
 %\vspace{-1em}
-We also chose this model to demonstrate the frameworks ability to tackle larger problems.
+In addition to the physics challenges, we chose this model to demonstrate the frameworks ability to tackle large problems.
 The number of design variables is eight, and the number of objectives is seven.
-This problem is also less predictable, due to the high dimensionality 
-and nonlinear effects such as space charge. There is not a definite idea
-before hand where the Pareto front will fall. This work is also meaningful in that
+This problem encompasses high dimensionality 
+and nonlinear effects such as space charge. There is no existing information
+that accurately predicts where the Pareto front will fall. This work is also meaningful in that
 it will guide future operations at the AWA.
 
 \begin{align}
@@ -464,19 +464,21 @@ it will guide future operations at the AWA.
 \quad & \phi_{\text{linac}} =0^\circ \label{eq:awa:lastdvar}
 \end{align}
 
-The first four objectives minimize the transverse ($rms_x$) and longitudinal ($rms_s$) 
-beam sizes at two locations of interest in the beam line ($s_1$,$s_2$). 
-These are the longitudinal positions at the entrance of the kicker and 
-$1[\text{m}]$ after the exit of the kicker. The beam size needs to be minimized
-here to prevent scraping and ensure transmission through the wakefield structures 
-following the kicker. The next two objectives (\ref{eq:awa:p4}) minimize the 
+The first four objectives, Eqs. (\ref{eq:awa:p1}) and (\ref{eq:awa:p2}),
+minimize the transverse ($rms_x$) and longitudinal ($rms_s$) 
+beam sizes at two locations of interest in the beam line ($s_1$,$s_2$);
+the longitudinal positions at the entrance of the kicker and 
+$1$ meter after the exit of the kicker. 
+Minimizing the beam size at these locations is essential to 
+to preventing scraping and ensuring transmission through the wakefield structures 
+following the kicker. The next two objectives (\ref{eq:awa:p3}) minimize the 
 transverse emittance, which favors less divergence in the beam and reduces 
 emittance growth during transport. The last objective (\ref{eq:awa:p4}), 
-minimizes energy spread in the bunch at the entrance of the kicker, $s_1$.  
+minimizes energy spread in the bunch at the entrance of the kicker at $s_1$.  
 This helps reduce emittance and beam size growth in the kicker.  
 Equations (\ref{eq:awa:firstconstr}) to
 (\ref{eq:awa:lastdvar}) define the charge, gun voltage, linac voltages, 
-laser radius and linac cavity phases. These are parameters in the simulation 
+laser radius and linac cavity phases (in that order). These are parameters in the simulation 
 that must be defined, but do not vary during the optimization.
 
 %\vspace{-1em}
@@ -515,8 +517,8 @@ the gun phase (GPHASE), the laser longitudinal full width half max (FWHM),
 and four quadrupole strengths (KQ1-KQ2). The objectives include
 beam size, emittance, and energy spread as
 defined in Eqs. (\ref{eq:awa:p1}) to (\ref{eq:awa:p4}). 
-The s location at the entrance of the kicker is $s_1=16.45[\text{m}]$, 
-and the s location of interest after the kicker is $s_1=18.45[\text{m}]$. 
+The location at the entrance of the kicker is $s_1=16.45$~meters, 
+and the location of interest after the kicker is $s_1=18.45$~meters. 
 
 All simulations for this experiment were carried out on Bebop a
 high performance computing (HPC)
@@ -525,7 +527,7 @@ at Argonne National Laboratory (ANL). We used Intel Knights Landing
 (KNL) processors at 1.3 GHz with 128 GB of memory 
 and 64 cores per node. There are 352 compute nodes available on 
 Bebop, with a total of 22,528 cores. All jobs were run and compared 
-on 8 cores each, which allowed 8 jobs per node on the KNL.
+on 8 cores each, which allowed 8 jobs per node on the KNLs.
 This in combination with the amount of nodes available 
 allows for very large optimization jobs, like the AWA case.
 
@@ -535,22 +537,25 @@ maintaining the physics of interest.
 The grid size was $16 \times 16 \times 32$, 
 and parallelized in the x and y directions.
 After comparing several options we choose ten thousand particles 
-in combination with adjusting the time step near sensitive elements 
+in combination with adjusting the time step (dT) near sensitive elements 
 (i.e. quadurpoles, kicker). 
 The resulting simulations are low fidelity, but closely approximate 
 the mid fidelity simulations for metrics of interest, as shown in 
 Fig. \ref{tstep}. For all models, the longitudinal parameters (rms$_s$ and energy) 
 are calculated correctly, but we see discrepancies in the transverse 
-rms$_x$ and $\epsilon_x$ in the low fidelity results. A summary of 
-the parameters used is listed in Table \ref{fidelity}. 
+rms$_x$ and $\epsilon_x$ in the low fidelity results. 
+Average run time each simulation with the adjusted time steps was 1.6~minutes.
+In comparison the mid fidelity simulations ran for 18~minutes.
+%A summary of the parameters used is listed in Table \ref{fidelity}. 
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{Report/timestep_comparison}
-	\caption{Comparison of different fidelity models.}
+	\caption{Comparison of different fidelity models (dT stands for time step).}
 	\label{tstep}
 \end{figure}
 
+\iffalse
 \begin{table}%[h!]
 	\begin{center}
 		\caption{Low and mid fidelity simulation parameters.}
@@ -566,10 +571,11 @@ the parameters used is listed in Table \ref{fidelity}.
 		\end{tabular*}
 	\end{center}
 \end{table}
+\fi 
 
 \subsubsection{AWA Optimization Results}
-While the optimization problem and goals are well defined (Section \ref{awaproblem}), 
-it is not clear what the best input parameters for the NSGA-II are.
+While the optimization problem and goals were well defined (Section \ref{awaproblem}), 
+it was not clear what the best input parameters for the NSGA-II should be.
 These parameters include gene mutation probability, mutation probability, 
 recombination probability, number of individuals (initial and and for later generations), and number of generations to complete. 
 Given the beam line and design variables given in Section \ref{awaproblem}, 
@@ -583,7 +589,8 @@ as shown in Table \ref{extable}.
 \begin{table}%[h!]
 	\begin{center}
 		\caption{Input Parameters for initial twenty four hour AWA optimization experiments. 
-			The gene mutation probability was equal to the mutation probability (not shown) in all four experiments. The number of individuals}
+			The gene mutation probability was equal to the mutation probability (not shown) in all four experiments. 
+			The max number of individuals per generation was~80.}
 		\label{extable}
 		\begin{tabular*}{\textwidth}{l @{\extracolsep{\fill}} C C D }
 			\hline\noalign{\smallskip}
