--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -545,7 +545,7 @@ Fig. \ref{tstep}. For all models, the longitudinal parameters (rms$_s$ and energ
 are calculated correctly, but we see discrepancies in the transverse 
 rms$_x$ and $\epsilon_x$ in the low fidelity results. 
 Average run time each simulation with the adjusted time steps was 1.6~minutes.
-In comparison the mid fidelity simulations ran for 18~minutes.
+In comparison the mid fidelity simulations ran for 18~minutes each.
 %A summary of the parameters used is listed in Table \ref{fidelity}. 
 
 \begin{figure}
@@ -577,7 +577,8 @@ In comparison the mid fidelity simulations ran for 18~minutes.
 While the optimization problem and goals were well defined (Section \ref{awaproblem}), 
 it was not clear what the best input parameters for the NSGA-II should be.
 These parameters include gene mutation probability, mutation probability, 
-recombination probability, number of individuals (initial and and for later generations), and number of generations to complete. 
+recombination probability, number of individuals (initial and and for later generations), 
+and number of generations to complete. 
 Given the beam line and design variables given in Section \ref{awaproblem}, 
 four optimization experiments were done with varying NSGA-II parameters. 
 Similar to the time step scan, 
@@ -605,41 +606,19 @@ as shown in Table \ref{extable}.
 	\end{center}
 \end{table}
 
-The initial number of individuals was fixed at 656, 
-and the minimum number individuals in later generations was fixed at 328. 
-These numbers we in part based on the architecture of the KNL's. 
-Since each simulation takes 8 cores, and there are 64 cores per KNL node, 
-we wanted a large population size that would fit evenly on these resources. 
+
+The maximum number of individuals per generation was fixed at 80, 
 Each experiment was allowed to run for twenty four hours, with 
-a max generation limit of 100. 
-We also reduced the six objectives to the four most important for quicker evaluation of these tests 
-%\nrnote{Q for Andreas, is it true less obj is faster}.
-The objectives include: 
-$\varepsilon_{x}\left(s = s_1\right)\text{, } \varepsilon_{x}\left(s = s_2\right)\text{, } \text{rms}_{s}\left(s = s_1\right)\text{, and }  \text{rms}_{s}\left(s = s_2\right)$. 
-The OPAL input file for ex-3 is given as an example:
+a maximum generation limit of 100. 
+We reduced the seven objectives to the four needed to construct 
+the Pareto fronts that would be the final goal of this study.
+The objectives include: $\varepsilon_{x}\left(s = s_1\right)\text{, } \varepsilon_{x}\left(s = s_2\right)\text{, } \text{rms}_{s}\left(s = s_1\right)\text{, and }  \text{rms}_{s}\left(s = s_2\right)$. 
+The optimization parameters specific to OPAL input for ex-3 is given as an example.
+Note the design variables defined in Section \ref{awaproblem}
+precede the optimization parameters in the OPAL input file.
 
 \vspace{0.2cm}
 {\footnotesize \begin{verbatim}
-	TITLE, STRING="ANL Optimisation";
-	
-	// Gun variables
-	dv0: DVAR, VARIABLE="IBF",    LOWERBOUND=200.0, UPPERBOUND=500.0;
-	dv1: DVAR, VARIABLE="IM",     LOWERBOUND=170.0, UPPERBOUND=260.0;
-	dv2: DVAR, VARIABLE="GPHASE", LOWERBOUND=-30.0, UPPERBOUND=0.0;
-	dv3: DVAR, VARIABLE="FWHM",   LOWERBOUND=1.5,   UPPERBOUND=10.0;
-	
-	// Quad variables
-	dv4: DVAR, VARIABLE="KQ1", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	dv5: DVAR, VARIABLE="KQ2", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	dv6: DVAR, VARIABLE="KQ3", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	dv7: DVAR, VARIABLE="KQ4", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	
-	// Objectives
-	rmss1:  OBJECTIVE,EXPR="fabs(statVariableAt('rms_s',16.5))";
-	emitx1: OBJECTIVE,EXPR="fabs(statVariableAt('emit_x',16.5))";	
-	rmss2:  OBJECTIVE,EXPR="fabs(statVariableAt('rms_s',18.5))";
-	emitx2: OBJECTIVE,EXPR="fabs(statVariableAt('emit_x',18.5))";
-	
 	OPTIMIZE, INPUT="tmpl/optLinac_40nC.tmpl",
 	OUTPUT="optLinac_40nC",
 	OUTDIR="results",
@@ -663,7 +642,8 @@ The OPAL input file for ex-3 is given as an example:
 
 After collection of the data for all four experiments, several metrics
 were compared, including number of generations completed in twenty four hours,
-location of Pareto fronts at $s_1$ and $s_2$, and the design variables at the Pareto front. From Table \ref{extable}, we clearly see ex-3 is significantly 
+Pareto fronts at $s_1$ and $s_2$, and the design variables at the Pareto front. 
+From Table \ref{extable}, we clearly see ex-3 is significantly 
 slower, as it evaluated about 30 to 40 fewer generations than the other experiments.
 Perhaps this trade off would be acceptable if the Pareto front was significantly 
 improved, but from Fig. \ref{expareto}, we can see this is not the case.
@@ -671,6 +651,18 @@ The Pareto fronts at $s_1$, are nearly identical. We could expect
 they would continue to converge given more time. 
 When looking at the Pareto front for $s_2$, we see ex-4 has a slight 
 edge over the others.  
+\begin{figure}
+	\centering
+	\includegraphics[width=0.75\textwidth]{Report/ex-pareto1}%
+	\llap{\raisebox{1.8cm}{%  move next graphics to top right corner
+			\includegraphics[height=5.5cm]{Report/ex-pareto2}%
+	}}
+	\caption{My overlay figure.}
+\end{figure}  
+
+
+
+
 \begin{figure}
 	\centering
 	\begin{subfigure}{0.49\textwidth}
@@ -711,7 +703,11 @@ Pareto front.
 
 
  
-
+The initial number of individuals was fixed at 656, 
+and the minimum number individuals in later generations was fixed at 328. 
+These numbers we in part based on the architecture of the KNL's. 
+Since each simulation takes 8 cores, and there are 64 cores per KNL node, 
+we wanted a large population size that would fit evenly on these resources. 
 
 
 
